I4056 - fixes word break in review list page

--- a/src/amo/components/AddonReviewList/styles.scss
+++ b/src/amo/components/AddonReviewList/styles.scss
@@ -53,6 +53,10 @@
   height: 36px;
 }
 
+.AddonReviewList-header-text {
+  min-width: 50%;
+}
+
 .AddonReviewList-header-icon-image {
   display: block;
   height: 36px;
@@ -62,7 +66,7 @@
   font-size: $font-size-m;
   margin: 0;
   padding: 0;
-  word-break: break-all;
+  word-wrap: break-word;
 
   a,
   a:link {
